--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
     "firebase": "^12.1.0",
+    "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.12"
   }
 }
