--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
