--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/list": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@tailwindcss/vite": "^4.1.12",
