--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -20,6 +20,7 @@
     "astro-icon": "^1.1.5",
     "firebase": "^12.1.0",
     "nanostores": "^1.0.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zod": "^4.1.5"
   }
 }
