--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -19,6 +19,7 @@
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.5.0",
     "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.12",
     "zod": "^4.1.5"
