feat: integrate Vercel adapter and enhance authentication flow
- Added @astrojs/vercel dependency for deployment support.
- Refactored Login component to streamline sign-in response handling.
- Updated Navbar component to utilize session cookies for user authentication state.
- Created env.d.ts to define user structure in App locals.
- Enhanced middleware to verify session cookies and set user context.
- Modified signout API to redirect to /login instead of /signin.
- Improved auth client service to manage user state and session cookies.
- Implemented server-side session cookie verification.

--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.2.7",
     "@emailjs/browser": "^4.4.1",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
