--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -23,6 +23,10 @@
     "firebase-admin": "^13.5.0",
     "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.12",
+    "toastify-js": "^1.12.0",
     "zod": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/toastify-js": "^1.12.4"
   }
 }
