--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -22,11 +22,13 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^13.5.0",
     "nanostores": "^1.0.1",
+    "nodemailer": "^7.0.6",
     "tailwindcss": "^4.1.12",
     "toastify-js": "^1.12.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@types/nodemailer": "^7.0.1",
     "@types/toastify-js": "^1.12.4"
   }
 }
