--- a/.github/workflows/check-reservations.yaml
+++ b/.github/workflows/check-reservations.yaml
@@ -2,7 +2,7 @@ name: Run check reservations
 on:
   schedule:
     # This cron expression runs the job every 30 minutes on every day.
-    - cron: "0 */30 * * *"
+    - cron: "*/30 * * * *"
   # Allows manual triggering of the workflow
   workflow_dispatch:
 
